# bioforge

./: Cargo.toml  README.md
bioforge-app/: Cargo.toml  LICENSE-APACHE  README.md  request.yaml
bioforge-app/src/: config.rs  jit.rs  main.rs  plotting.rs  workflow.rs
bioforge-core/: Cargo.toml  LICENSE-MIT  README.md
bioforge-core/src/: analysis.rs  error.rs  lib.rs  logger.rs
bioforge-core/src/simulation/: builder.rs  engine.rs  mod.rs  state.rs
bioforge-schemas/: Cargo.toml  README.md
bioforge-schemas/src/: asset.rs  command.rs  environment.rs  file_formats.rs  labor.rs  lib.rs  material.rs  organism.rs  organism_state.rs  process.rs  rule.rs  tea_lca.rs
data/knowledge_base/1_materials/: 1.a.upstream_media_dictionary.yaml  1.b.downstream_consumables.yaml  1.c.consumables_qc_upstream-downstream.yaml
data/knowledge_base/2_organisms/: 2.a.organisms.yaml
data/knowledge_base/3_assets/: 3.a.assets_upstream.yaml  3.b.assets_downstream.yaml  3.c.assets_qc_upstream.yaml  3.d.assets_qc_downstream.yaml  3.e.assets_qc_upstream-downstream.yaml  3.f.tooling_upstream.yaml  3.g.tooling_downstream.yaml  3.h.tooling_upstream-downstream.yaml
data/knowledge_base/4_labor/: 4.a.labor.yaml
data/knowledge_base/5_processes/: 5.a.downstream_processes.yaml
data/knowledge_base/6_rules/: 6.a.constraints.yaml
