[package]
name = "bioforge-app"
version = "0.0.1"
authors = ["Darian Harrison", "Daraian Harrison <darianharrison89@gmail.com>"]
edition = "2021"
description = "A Framework for Sustainable Bioprocess Design"
license = "MIT OR Apache-2.0"
readme = "README.md"
# repository = "https://github.com/DarianHarrison/bioforge-app"
keywords = ["bioprocess", "automation", "digital-twin", "tea", "lca"]
categories = ["science", "simulation", "data-structures"]

[dependencies]
# Workspace dependencies
# Workspace dependencies
bioforge-core = { path = "../bioforge-core" }
bioforge-schemas = { path = "../bioforge-schemas" }

# Public dependencies
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
plotters = "0.3.5"
csv = "1.3"
serde_json = "1.0"