[package]
name = "bioforge-core"
version = "0.0.1"
authors = ["Darian Harrison", "Daraian Harrison <darianharrison89@gmail.com>"]
edition = "2021"
description = "A Framework for Sustainable Bioprocess Design"
license = "MIT OR Apache-2.0"
readme = "README.md"
# repository = "https://github.com/DarianHarrison/bioforge-core"
keywords = ["bioprocess", "automation", "digital-twin", "tea", "lca"]
categories = ["science", "simulation", "data-structures"]

[dependencies]
# Workspace dependencies
bioforge-schemas = { path = "../bioforge-schemas" }

# Public dependencies
anyhow = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0" # For custom error types